@@ -4,7 +4,7 @@
 /*
   farkeys.hpp
 
-  Inside KeyName for FAR Manager 2.0 build 1330
+  Inside KeyName for FAR Manager 2.0 build 1382
 */
 
 /*
