@@ -70,11 +70,6 @@ HANDLE WINAPI OpenPluginW(int OpenFrom, INT_PTR Item)
     
     delete[] nfile;
 	}
-	else
-  {
-    editorSet->ReadSettings();
-		editorSet->configure();
-  }
 
 	return INVALID_HANDLE_VALUE;
 };
@@ -85,7 +80,7 @@ HANDLE WINAPI OpenPluginW(int OpenFrom, INT_PTR Item)
 int WINAPI ConfigureW(int ItemNumber)
 {
   editorSet->ReadSettings();
-	editorSet->configure();
+	editorSet->configure(false);
 	return 1;
 };
 
